updating my table

--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
     <section>
           <div class="rightside">
             <div>
-              <img src="./about page/img/5F3D9CD0-D970-4DC8-8AD0-00DB75E5A38D.png" alt="...">
+              <img src="./about page/img/5F3D9CD0-D970-4DC8-8AD0-00DB75E5A38D.png" alt="school logo" width="350" height="300">
             </div>
             <div>
               <h1> Learn highly sought after skills without hassle </h1>    
@@ -113,10 +113,12 @@
                   By Clicking I agree to <a href="https://altschoolafrica.com/terms-and-conditions">Terms of use</a> and aknowledge that i have read the <a href="https://altschoolafrica.com/privacy-policy">Privacy Policy</a>
               </p>
               <br>
-              <button type="submit">Submit</button>
+              <button type="submit">Submit</button><br><br>
           </form>
 
-          <a id="top" href="#top"> Back to the top</a>
+          <button> 
+            <a id="top" href="#Top"> Back to the top</a>
+          </button>
         </div>
     </div>
     </section>
