--- a/table/table.html
+++ b/table/table.html
@@ -8,7 +8,9 @@
 </head>
 <section>
      <!-- internal navigation -->
-     <button><a href="../form.html">click to go to back Home page</a></button>
+     <button>
+        <a href="../form.html">back Home page</a>
+    </button>
 </section><br><br>
 
    <!-- Alt school in Html -->
