--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <div class="navigation">
         <!-- internal navigation -->
-        <a href="/First-assignment/about.html">About Me</a><br>
+        <a href="./about.html">About Me</a><br>
         <a href="#registration">Form Application</a><br>
-        <a href="../table/table.html">Courses And Schools</a><br>
-        <a href="../media/media.html">Media page</a> 
+        <a href="./table.html">Courses And Schools</a><br>
+        <a href="./media/media.html">Media page</a> 
         <h1>Alt___<br>School</h1>        
     </div>
     
