--- a/media/media.html
+++ b/media/media.html
@@ -8,7 +8,7 @@
 </head>
 <section>
         <!-- internal navigation -->
-        <button><a href="form.html">back to Home page</a></button>
+        <button><a href="../index.html">back to Home page</a></button>
 </section>
 
 <body>
