--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
 <section>
      <!-- internal navigation -->
      <button>        
-        <a href="../form.html">back Home page</a>
+        <a href="./index.html">back Home page</a>
     </button>
 </section><br><br>
 
